--- a/Browser/app/build.gradle
+++ b/Browser/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 32
 
     defaultConfig {
         applicationId "org.tech.town.simplewebbrowser"
-        minSdk 21
-        targetSdk 33
+        minSdk 23
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
@@ -33,8 +33,11 @@ android {
 
 dependencies {
 
+    //SwipeRefreshLayout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
